# Page_Analyzer

./: .gitignore  Makefile  README.md  database.sql  main  pyproject.toml
.github/workflows/: CI.yml
page_analyzer/: app.py  db.py  db_commands.py  init.py  url_parse.py  url_validation.py  utils.py
page_analyzer/templates/: index.html  main.html  url.html  url_details.html  url_get.html  urls.html
page_analyzer/templates/layouts/: layout.html
page_analyzer/tests/: test_app.py
