[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Mikhail Zherebtsov <bezrezen97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
flake8 = "^5.0.4"
pytest-cov = "^4.1.0"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
